--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "browser-sync": "^2.27.5",
     "cssnano": "^5.0.7",
     "gulp": "^4.0.2",
+    "gulp-connect-php": "^1.0.3",
     "gulp-postcss": "^9.0.0",
     "gulp-sass": "^5.0.0",
     "sass": "^1.37.5"
